Implement complete Groups & Collaborative Planning system (Phases 1-4)
Major Features Added:
- Phase 1: Core group functionality with invite codes
- Phase 2: Phone/SMS and email invites via Twilio/SendGrid
- Phase 3: Collaborative activity sharing and planning
- Phase 4: Real-time infrastructure (Socket.io ready)

Backend Implementation:
- 13 new REST API endpoints for groups, invites, and activity sharing
- 15 storage layer functions with authorization checks
- Invite service supporting SMS (Twilio) and email (SendGrid)
- Role-based access control (admin vs member permissions)
- Canonical activity versioning for collaborative editing

Frontend Components:
- CreateGroupDialog: Group creation wizard with invite code generation
- JoinGroupDialog: Join groups via formatted invite codes
- GroupCard: Display group info with member counts and admin badges
- GroupDetailsModal: Full group management with members/activities/settings tabs
- AddMembersDialog: Send phone/SMS and email invitations
- ShareActivityToGroupDialog: Share activities to groups for collaboration

Additional Enhancements:
- Journal enhancements: End-of-Day Review, Export, Insights Dashboard
- Updated environment variable documentation
- Installed dependencies: twilio, @sendgrid/mail, socket.io, canvas-confetti

Configuration:
- Added Twilio and SendGrid environment variables to .env.example
- Socket.io packages installed for future real-time features

Launch-Ready Features:
✅ Create/join groups with shareable invite codes
✅ Invite members via SMS and email with custom messages
✅ Share activities to groups for collaborative planning
✅ Admin controls for member management
✅ Canonical activity versions for group collaboration
✅ Beautiful HTML email templates for invitations

--- a/.env.example
+++ b/.env.example
@@ -45,9 +45,22 @@ TAVILY_API_KEY="configured_in_replit_secrets"
 # Only set these if you want direct OAuth instead of Replit Auth
 # Add these through Replit's Secrets tab, NOT in this file!
 # GOOGLE_CLIENT_ID="add_via_replit_secrets_tab"
-# GOOGLE_CLIENT_SECRET="add_via_replit_secrets_tab" 
+# GOOGLE_CLIENT_SECRET="add_via_replit_secrets_tab"
 # FACEBOOK_APP_ID="add_via_replit_secrets_tab"
 # FACEBOOK_APP_SECRET="add_via_replit_secrets_tab"
+
+# Group Invite System (Phone/Email)
+# ----------------------------------
+# Twilio for SMS invites
+# Sign up at: https://www.twilio.com (free trial available)
+TWILIO_ACCOUNT_SID="configured_in_replit_secrets"
+TWILIO_AUTH_TOKEN="configured_in_replit_secrets"
+TWILIO_PHONE_NUMBER="configured_in_replit_secrets"
+
+# SendGrid for email invites
+# Sign up at: https://sendgrid.com (free tier: 100 emails/day)
+SENDGRID_API_KEY="configured_in_replit_secrets"
+SENDGRID_FROM_EMAIL="configured_in_replit_secrets"
 
 # Development Settings
 # -------------------
