feat: Implement premium share experience with rich OG images
Enhance social media sharing with beautiful, detailed Open Graph images
and rich WhatsApp message formatting.

Features:
- OG image generation with activity backdrop + details overlay
  * Activity emoji, title, and category badge
  * First 4 tasks with completion status
  * Progress bar and completion percentage
  * "JournalMate | Own, Edit & Share Your Plans" branding
  * 1200x630px PNG with proper meta tags

- Web image search via Tavily API
  * Priority: User backdrop > Web search > Category fallback
  * Automatic relevant image discovery
  * Curated Unsplash fallbacks per category

- Rich WhatsApp share formatting
  * Bold titles with emojis
  * Task highlights (first 3 tasks)
  * Progress stats and completion info
  * Welcoming JournalMate intro
  * Clean, professional formatting

- Enhanced share page UI
  * "Own, Edit & Track This Plan" messaging
  * "Free to start • Track unlimited goals • Collaborate" value props
  * Improved CTAs with Sparkles icons

Technical:
- New endpoint: GET /api/share/:shareToken/og-image
- Services: ogImageGenerator.ts, webImageSearch.ts
- Uses sharp for image composition
- Uses axios for image downloads
- 24-hour cache headers for performance
- Fallback gradient images if processing fails

Files changed:
- client/src/pages/SharedActivity.tsx (OG meta tags, share formatting, CTAs)
- server/routes.ts (OG image endpoint)
- server/services/ogImageGenerator.ts (enhanced with backdrop support)
- server/services/webImageSearch.ts (new Tavily integration)
- package.json (sharp, axios dependencies)

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-instagram": "^1.0.5",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "canvas": "^3.2.0",
     "canvas-confetti": "^1.9.4",
@@ -99,6 +100,7 @@
     "react-spring": "^10.0.3",
     "recharts": "^2.15.2",
     "resend": "^6.2.0",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0",
