Add social verification, share cards, and activity reporting features
This update adds comprehensive social media verification and sharing capabilities, plus plan reporting functionality:

**Social Verification System:**
- New SocialVerificationTab component for linking social media posts (Twitter/X, Instagram, Threads, LinkedIn)
- Automatic plannerProfileId linking when social links are saved
- Clickable verification badges in Discovery plans
- Credit bonus (+5 credits) when verified plans are adopted

**Share Card Generator:**
- Multi-platform share card templates (Twitter, Instagram, LinkedIn, Facebook, Stories)
- Integration with Unsplash for background images
- HTML-to-image conversion for easy sharing
- Preview and download functionality

**Activity Reporting:**
- ReportDialog component for reporting fraudulent/spam plans
- New activityReports database table with moderation workflow
- Report button added to Discovery plan cards
- Duplicate report prevention per user/activity

**Database Changes:**
- Added plannerProfiles table with social media links
- Added activityReports table for moderation
- Added credit tracking fields (creditsEarned, totalCredits)
- Migration files for social verification and reports

**API Endpoints:**
- POST /api/activities/:id/social-links - Save social verification links
- POST /api/activities/:id/report - Report activities
- Credit service for managing user credits

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "JournalMate - AI Lifestyle Planner",
-  "short_name": "JournalMate",
-  "description": "AI-powered journaling and lifestyle planning application",
+  "name": "JournalMate.ai - AI Lifestyle Planner",
+  "short_name": "JournalMate.ai",
+  "description": "AI-powered Journaling and lifestyle planning app",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f0f23",
