--- a/package.json
+++ b/package.json
@@ -96,7 +96,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "html-to-image": "^1.11.13",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
