--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -46,3 +46,6 @@ project(':capgo-capacitor-native-biometric').projectDir = new File('../node_modu
 
 include ':ebarooni-capacitor-calendar'
 project(':ebarooni-capacitor-calendar').projectDir = new File('../node_modules/@ebarooni/capacitor-calendar/android')
+
+include ':capacitor-share-extension'
+project(':capacitor-share-extension').projectDir = new File('../node_modules/capacitor-share-extension/android')
