dedup the group function call in the code base

--- a/android/keystore.properties
+++ b/android/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=planmate360
-keyPassword=planmate360
+storePassword=ionic123
+keyPassword=ionic123
 keyAlias=Journalmate_app
 storeFile=../app/JOURNALMATE_RELEASE_KEY.keystore
