Adding Android app configureation and design

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <!-- Deep link for OAuth callback -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="ai.journalmate.app" />
+                <data android:scheme="https"
+                      android:host="journalmate.ai"
+                      android:pathPrefix="/auth/callback" />
+            </intent-filter>
+
             <!-- Share text content -->
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
