--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -7,6 +7,52 @@
   "background_color": "#0f0f23",
   "theme_color": "#6C5CE7",
   "orientation": "portrait-primary",
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "media",
+          "accept": ["image/*", "video/*", "audio/*", "text/*", "application/pdf"]
+        }
+      ]
+    }
+  },
+  "shortcuts": [
+    {
+      "name": "Share from Instagram",
+      "short_name": "Instagram",
+      "description": "Share Instagram posts and reels to plan and track",
+      "url": "/share-target?source=instagram",
+      "icons": [{ "src": "/icons/pwa/icon-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Share from TikTok",
+      "short_name": "TikTok",
+      "description": "Share TikTok videos to plan and track",
+      "url": "/share-target?source=tiktok",
+      "icons": [{ "src": "/icons/pwa/icon-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Share from ChatGPT",
+      "short_name": "ChatGPT",
+      "description": "Import ChatGPT plans to track",
+      "url": "/share-target?source=chatgpt",
+      "icons": [{ "src": "/icons/pwa/icon-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Quick Journal Entry",
+      "short_name": "Journal",
+      "description": "Create a quick journal entry",
+      "url": "/?quick-journal=true",
+      "icons": [{ "src": "/icons/pwa/icon-192x192.png", "sizes": "192x192" }]
+    }
+  ],
   "icons": [
     {
       "src": "/icons/pwa/icon-72x72.png",
