feat: Improve Android notifications and fix Settings toggles
Android Notifications:
- Add showNotification() to BackgroundServicePlugin for reliable one-time alerts
- Create HIGH importance alert channel with vibration for test notifications
- Improve lock screen notification visibility with brighter text colors
- Update default messages: "JournalMate Active", "Tap to add your first task"
- Add showAlertNotification() to backgroundService.ts TypeScript API

Settings Fixes:
- Fix invite friends spinner stuck on cancel with Promise.race timeout (30s)
- Add visibility change listener as backup for contact picker cancellation
- Update test notification to use BackgroundService.showNotification()

Note: Calendar Integration and Smart Scheduler toggles require db:push
to create the mobile_preferences table in production database.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -203,6 +203,16 @@
             </intent-filter>
         </receiver>
 
+        <!-- Notification Alarm Receiver (scheduled notifications from JS/Capacitor) -->
+        <receiver
+            android:name=".NotificationAlarmReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="SCHEDULED_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
+
         <!-- Task Action Receiver (notification button actions) -->
         <receiver
             android:name=".TaskActionReceiver"
